<resources>
    <string name="app_name">Rechef</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your Password</string>
    <string name="logout">Logout</string>
    <string name="Splash_1">Welcome to\nReChef!</string>
    <string name="rechef_logo">Rechef Logo</string>
    <string name="Splash_2">Where Inspiration Meets Ingredients!</string>
    <string name="HI">Hey, \nWelcome \nBack</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Enter your username</string>
    <string name="hi_register">Let\'s get \nstarted</string>
    <string name="already_have_an_account">Already have an account!</string>
    <string name="rechef">Rechef</string>
    <string name="home">Home</string>
    <string name="scan">Scan</string>
    <string name="bookmark">Bookmark</string>
    <string name="find_your_food">Find \nYour Food</string>
    <string name="searchbar_hint">What food for today…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="tv_forgot1">Trouble logging in?</string>
    <string name="tv_forgot2">Enter your email and we\'ll send you a link to get back into your account.</string>
    <string name="back_to_login">Back to Login</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Scan Image</string>
    <string name="scan_text">Capture or Upload an Image</string>
    <string name="recipe">Recipe</string>
    <string name="time">%1$s Min</string>
    <string name="calories">%1$s kcal</string>
    <string name="google">Google</string>
    <string name="or_continue_with">or continue with</string>
    <string name="recipes_result">%1$s Based \nRecipes</string>
    <string name="ingredients">Ingredients</string>
    <string name="url">Recipe URL</string>
    <string name="fab">FAB</string>
</resources>